<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>product_delete</class>
 <widget class="QDialog" name="product_delete">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>278</width>
    <height>75</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Delete product</string>
  </property>
  <widget class="QLabel" name="label">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>10</y>
     <width>131</width>
     <height>16</height>
    </rect>
   </property>
   <property name="text">
    <string>Enter product:</string>
   </property>
  </widget>
  <widget class="QPushButton" name="pushButton_product_delete">
   <property name="geometry">
    <rect>
     <x>100</x>
     <y>40</y>
     <width>93</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>Delete</string>
   </property>
  </widget>
  <widget class="QLineEdit" name="lineEdit_product">
   <property name="geometry">
    <rect>
     <x>160</x>
     <y>10</y>
     <width>113</width>
     <height>22</height>
    </rect>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
